test/files/neg/plugin-rightafter-terminal/lib/plugins.jar.desired.sha1
7b909d4a0f0c9cc4bb85beed55ae34cd739b74cb ?plugins.jar
